--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FinBank - Seu Banco Digital</title>
+    <title>Taxicalafate - Seu Banco Digital</title>
     <meta name="description" content="Aplicativo bancário simples e seguro" />
-    <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
     
     <!-- PWA Meta Tags -->
@@ -15,7 +14,7 @@
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="FinBank" />
+    <meta name="apple-mobile-web-app-title" content="Taxicalafate" />
   </head>
 
   <body>
