<meta name=mobile-web-app-capable content=yes />

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taxicalafate - Seu Banco Digital</title>
     <meta name="description" content="Aplicativo bancário simples e seguro" />
-    
+      <meta name="mobile-web-app-capable" content="yes" />
+
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#6366f1" />
     <link rel="manifest" href="/manifest.json" />
