--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
       <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#6366f1" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Taxicalafate" />
+<!-- PWA Meta Tags -->
+<meta name="theme-color" content="#6366f1" />
+<link rel="manifest" href="/manifest.json" />
+<link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+<meta name="apple-mobile-web-app-title" content="Taxicalafate" />
+
   </head>
 
   <body>
